--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
+    //图像识别
+    implementation 'com.rmtheis:tess-two:9.1.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
@@ -38,8 +40,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-/**fresco 图片加载**/
+    /** fresco 图片加载 **/
     implementation 'com.facebook.fresco:fresco:2.1.0'
-/** TextView样式布局      **/
+    /** TextView样式布局 **/
     implementation 'com.github.lygttpod:SuperTextView:2.1.6'
 }
