feat:引入XUI框架 feat:修改部分按钮UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //XUI
+    implementation 'com.github.xuexiangjys:XUI:1.1.5'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     /** fresco 图片加载 **/
     implementation 'com.facebook.fresco:fresco:2.1.0'
     /** TextView样式布局 **/
