feat:CET成绩查询 feat:增加返回按钮

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExamActivity"></activity>
+        <activity android:name=".moreFun.CETActivity"></activity>
+        <activity android:name=".moreFun.ExamActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".SetTermActivity" />
         <activity android:name=".LoginActivity" />
