feat:普通成绩的查询功能 fix：仍需要修复闪退问题！

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".moreFun.ExamScoreActivity"></activity>
         <activity android:name=".moreFun.CETActivity"></activity>
         <activity android:name=".moreFun.ExamActivity" />
         <activity android:name=".DetailActivity" />
