feat:分享给同学方法帮助 feat:版本自动获取 feat:导航页快捷方式 feat:App下载方式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".moreFun.ExamScoreActivity"></activity>
-        <activity android:name=".moreFun.CETActivity"></activity>
+        <activity android:name=".ShareActivity"></activity>
+        <activity android:name=".moreFun.ExamScoreActivity" />
+        <activity android:name=".moreFun.CETActivity" />
         <activity android:name=".moreFun.ExamActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".SetTermActivity" />
