设置 解决返回bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShareActivity"></activity>
+        <activity android:name=".MySettingActivity"></activity>
+        <activity android:name=".ShareActivity" />
         <activity android:name=".moreFun.ExamScoreActivity" />
         <activity android:name=".moreFun.CETActivity" />
         <activity android:name=".moreFun.ExamActivity" />
