feat:实验成绩的查询 refactor：将工具类中的隐藏其他学期的功能写成了模板类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MySettingActivity"></activity>
         <activity android:name=".ShareActivity" />
+        <activity android:name=".moreFun.ExperimentScoreActivity"/>
         <activity android:name=".moreFun.ExamScoreActivity" />
         <activity android:name=".moreFun.CETActivity" />
         <activity android:name=".moreFun.ExamActivity" />
