--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MySettingActivity"></activity>
+        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".MySettingActivity" />
         <activity android:name=".ShareActivity" />
-        <activity android:name=".moreFun.ExperimentScoreActivity"/>
+        <activity android:name=".moreFun.ExperimentScoreActivity" />
         <activity android:name=".moreFun.ExamScoreActivity" />
         <activity android:name=".moreFun.CETActivity" />
         <activity android:name=".moreFun.ExamActivity" />
