--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HelperActivity"></activity>
+        <activity android:name=".moreFun.AverageTeacherActivity"></activity>
+        <activity android:name=".HelperActivity" />
         <activity android:name=".AboutActivity" />
         <activity android:name=".MySettingActivity" />
         <activity android:name=".ShareActivity" />
