实现自动教材评价功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".moreFun.AverageTeacherActivity" />
+        <activity android:name=".moreFun.AverageTextbookActivity" />
         <activity android:name=".HelperActivity" />
         <activity android:name=".AboutActivity" />
         <activity android:name=".MySettingActivity" />
