feat:添加更多链接页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HelpTestActivity"></activity>
+        <activity android:name=".moreFun.MoreUrlActivity"></activity>
+        <activity android:name=".HelpTestActivity" />
         <activity android:name=".moreFun.TestActivity" />
         <activity android:name=".moreFun.LibActivity" />
         <activity android:name=".moreFun.ResitActivity" />
