--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
     //XUI
     implementation 'com.github.xuexiangjys:XUI:1.1.5'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-
     //小米检查更新
     implementation 'mi-appstore:xiaomi-update-sdk:4.0.3'
+    //友盟移动统计
+    implementation  'com.umeng.umsdk:common:9.3.3'
+    implementation  'com.umeng.umsdk:asms:1.1.4' // asms包依赖
+    //友盟APM
+    implementation 'com.umeng.umsdk:apm:1.1.0'
 }
