feat:自定义主页背景 fix:周课表时间栏无法透明的bug perf:删除帮助相关内容

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         </activity>
         <activity android:name=".moreFun.AverageTeacherActivity" />
         <activity android:name=".moreFun.AverageTextbookActivity" />
-        <activity android:name=".HelperActivity" />
+        <activity android:name=".PersonalizedActivity" />
         <activity android:name=".AboutActivity" />
         <activity android:name=".SettingActivity" />
         <activity android:name=".moreFun.ExperimentScoreActivity" />
