perf:去除小米商店更新SDK perf:更新默认参数 fix:日课表获取课程信息为空的bug fix:尝试修复评价相关功能部分小规模闪退问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,16 +121,8 @@
             <intent-filter>
                 <action android:name="com.xiaomi.mipush.ERROR" />
             </intent-filter>
-        </receiver> <!-- 小米检查更新SDK -->
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="top.yvyan.guettable.selfupdate.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/xiaomi_update_sdk_file_paths" />
-        </provider> <!-- EMAS hotfix -->
+        </receiver>
+        <!-- EMAS hotfix -->
         <meta-data
             android:name="com.taobao.android.hotfix.IDSECRET"
             android:value="333403919" />
