feat: 小部件更换颜色和透明度方法(未持久化)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
             <intent-filter>
                 <action android:name="widget.refresh.action.CLICK" />
                 <action android:name="widget.refresh.action.USER" />
+                <action android:name="widget.refresh.action.ALPHA" />
+                <action android:name="widget.refresh.action.COLOR" />
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
 
