--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "top.yvyan.guettable"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 41 //记得补丁版本号归零(patch_version)
-        versionName "4.2.0"
+        versionCode 42 //记得补丁版本号归零(patch_version)
+        versionName "4.2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         android.buildFeatures.dataBinding = true
@@ -66,7 +66,7 @@ dependencies {
     //EMAS hotfix
     implementation 'com.aliyun.ams:alicloud-android-hotfix:3.2.18'
     //快速权限申请
-    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
+//    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
     //图片裁剪
     implementation 'com.github.yalantis:ucrop:2.2.4'
     //update
