fix:依赖无法下载的问题

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/' }
         maven { url "http://maven.aliyun.com/nexus/content/repositories/releases" }
     }
 }
