--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.github.zfman:TimetableView:v2.0.7'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
-    //图像识别
-    implementation 'com.rmtheis:tess-two:9.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -50,11 +48,11 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //XUI
     implementation 'com.github.xuexiangjys:XUI:1.1.5'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     //友盟移动统计
     implementation  'com.umeng.umsdk:common:9.3.6'
@@ -69,4 +67,8 @@ dependencies {
     implementation 'com.github.yalantis:ucrop:2.2.4'
     //bugly
     implementation 'com.tencent.bugly:nativecrashreport:3.9.1'
+    //xUpdate
+    implementation 'com.github.xuexiangjys:XUpdate:2.1.3'
+    implementation 'com.zhy:okhttputils:2.6.2'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-core:2.0.0'
 }
