--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "top.yvyan.guettable"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 50 //记得补丁版本号归零(patch_version)
-        versionName "4.5.1"
+        versionCode 53 //记得补丁版本号归零(patch_version)
+        versionName "5.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         android.buildFeatures.dataBinding = true
@@ -71,4 +71,13 @@ dependencies {
     implementation 'com.github.xuexiangjys:XUpdate:2.1.3'
     implementation 'com.zhy:okhttputils:2.6.2'
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:2.0.0'
+    //键值对存储
+    implementation 'com.tencent:mmkv:1.2.13'
+    //富文本
+    implementation 'com.zzhoujay.richtext:richtext:3.0.8'
+    //工具类
+    implementation 'com.github.xuexiangjys.XUtil:xutil-core:2.0.0'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-sub:2.0.0'
+
+    implementation 'com.zhy:okhttputils:2.6.2'
 }
