--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,18 +55,16 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     //友盟移动统计
-    implementation  'com.umeng.umsdk:common:9.3.6'
-    implementation  'com.umeng.umsdk:asms:1.2.2' // asms包依赖
+    implementation  'com.umeng.umsdk:common:9.6.1'
+    implementation  'com.umeng.umsdk:asms:1.8.0'
     //友盟APM
-    implementation 'com.umeng.umsdk:apm:1.4.2'
+    implementation 'com.umeng.umsdk:apm:1.9.2'
     //友盟在线参数
     implementation  'com.umeng.umsdk:abtest:1.0.0' //使用ABTest模块必选
     //EMAS hotfix
     implementation 'com.aliyun.ams:alicloud-android-hotfix:3.2.18'
     //图片裁剪
     implementation 'com.github.yalantis:ucrop:2.2.4'
-    //bugly
-    implementation 'com.tencent.bugly:nativecrashreport:3.9.1'
     //xUpdate
     implementation 'com.github.xuexiangjys:XUpdate:2.1.3'
     implementation 'com.zhy:okhttputils:2.6.2'
