perf:优化更新显示方式 perf:删除无用代码

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ allprojects {
         maven { url 'https://repo.huaweicloud.com/repository/maven' }
         maven { url 'https://jitpack.io' }
         maven { url 'https://repo1.maven.org/maven2/' }
-        maven { url "http://maven.aliyun.com/nexus/content/repositories/releases" }
+        maven { url "https://maven.aliyun.com/nexus/content/repositories/releases" }
     }
 }
 
