--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         minSdkVersion 21
         compileSdk 34
         targetSdkVersion 34
-        versionCode 64 //记得补丁版本号归零(patch_version)
-        versionName "5.4.2"
+        versionCode 65 //记得补丁版本号归零(patch_version)
+        versionName "5.4.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         android.buildFeatures.dataBinding = true
@@ -42,7 +42,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.7.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.google.code.gson:gson:2.10.1'
 
     testImplementation 'junit:junit:4.13.2'
@@ -51,24 +51,24 @@ dependencies {
     //XUI
     implementation 'com.github.xuexiangjys:XUI:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
     //友盟移动统计
-    implementation  'com.umeng.umsdk:common:9.6.1'
-    implementation  'com.umeng.umsdk:asms:1.8.0'
+    implementation  'com.umeng.umsdk:common:9.6.7'
+    implementation  'com.umeng.umsdk:asms:1.8.2'
     //友盟APM
-    implementation 'com.umeng.umsdk:apm:1.9.2'
+    implementation 'com.umeng.umsdk:apm:1.9.5'
     //友盟在线参数
-    implementation  'com.umeng.umsdk:abtest:1.0.0' //使用ABTest模块必选
+    implementation  'com.umeng.umsdk:abtest:1.0.1' //使用ABTest模块必选
     //EMAS hotfix
     implementation 'com.aliyun.ams:alicloud-android-hotfix:3.2.18'
     //图片裁剪
-    implementation 'com.github.yalantis:ucrop:2.2.4'
+    implementation 'com.github.yalantis:ucrop:2.2.8-native'
     //xUpdate
     implementation 'com.github.xuexiangjys:XUpdate:2.1.4'
     implementation 'com.zhy:okhttputils:2.6.2'
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:2.0.0'
     //键值对存储
-    implementation 'com.tencent:mmkv:1.2.13'
+    implementation 'com.tencent:mmkv:1.3.3'
     //富文本
     implementation 'com.zzhoujay.richtext:richtext:3.0.8'
     //工具类
